--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "daisyui": "^3.1.6",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
